# plutus-typed-vs-untyped

./: always-succeeds.cabal  cabal.project  hie.yaml  plutus-typed-vs-untyped.cabal  shell.nix
app/: Main.hs
