cabal-version     : 2.4
name              : plutus-typed-vs-untyped
version           : 0.0.0.1
author            : Brian W Bush <brian.bush@iohk.io>
maintainer        : Brian W Bush <brian.bush@iohk.io>
copyright         : (c) 2021 IOHK
license           : MIT
license-file      : LICENSE

executable always-succeeds
   hs-source-dirs  : app
   main-is         : Main.hs
   build-depends   : base ^>=4.14.1.0
                   , aeson
                   , base16-bytestring
                   , bytestring
                   , cardano-api
                   , containers
                   , data-default
                   , extra
                   , freer-extras
                   , freer-simple
                   , mtl
                   , ouroboros-network
                   , plutus-contract
                   , plutus-core
                   , plutus-ledger
                   , plutus-ledger-api
                   , plutus-tx
                   , plutus-tx-plugin
                   , prettyprinter
                   , req ^>= 3.9.0
                   , serialise
                   , text
                   , time
                   , unordered-containers
                   , uuid
                   , vector
   default-language: Haskell2010
   ghc-options     : -fplugin-opt PlutusTx.Plugin:defer-errors -Wall
